sandbox/output
Hiker.java:31: error: cannot find symbol
        if (negatives.length > 0) {
                     ^
  symbol:   variable length
  location: variable negatives of type String
1 error
